force-app/main/default/objects/Invoice_Item__c/Invoice_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>II-{0000}</displayFormat>
        <label>Invoice Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>